syntax = "proto3";



service SockCardGrpc{

  rpc getById(IntReq) returns (sockCard){}

  rpc addSockCard(sockCard)  returns (Empty){}

  rpc getAllSockCards(Empty) returns (stream sockCard){}

  rpc deleteSockCardById(IntReq) returns (sockCard);

  rpc getByTitle (StringReq) returns (sockCard);

  rpc updateSockCard(sockCard) returns (sockCard);
}
message IntReq{
  int32 request = 1;
}
message StringReq {
  string request = 1;
}
message sockCard{
  int32 id = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string material = 5;
  string brand = 6;
  string image = 7;
  string type = 8;
}
message Empty{

}